# flipper-pc-monitor-backend-USB

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  system_info.rs
