[package]
name = "flipper-pc-monitor-backend-usb"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serialport = "4.2.2" # Replaces btleplug
sysinfo = "0.30.5"
serde = { version = "1.0.164", features = ["derive"] }
xmltojson = { git = "https://github.com/rtyler/xmltojson", version = "0.1.3" }
# Removed: tokio, futures, btleplug, uuid (unless needed for async serial, but sync is simpler for this)
